# LegalReasoner

./: .env.template  .gitignore  README.md  __init__.py  component_diagnostic.py  comprehensive_test_suite.py  create_dataset.py  custom_datasets.py  dataset_prefix_helper.py  factory.py  format_dataset.py  full_dataset_training.sh  legal_dataset.md  legal_grpo_script.sh  legal_model_inference.sh  performance_test_framework.py  project_structure.md  pyproject.toml  requirements.txt  simple_custom_reward.py  test.json  test.pkl  test_config_default.yaml  test_configuration.py  test_execution_guide.py  test_reward_function.py  test_runner.py  train.json  train.pkl  verl_integration.py  verl_integration_guide.md
config/: __init__.py  config_settings_update.py  internal_config.yaml  settings.py
config/prompts/: __init__.py  general_chat.py  judicial_reasoning.py  jurisdiction_compliance.py  opinion_generation.py  precedent_analysis.py
core/: __init__.py  data_structures.py  enums.py  exceptions.py
external_code_updates/: custom_test_train_grpo.sh  custom_train_grpo.sh  main_ppo.py  ppo_trainer.yaml  simple_train_grpo.sh  test_4xA6000.sh
judges/: __init__.py  api_client.py  base.py  general_chat.py  general_chat_ensemble_update.py
judges/specialized/: __init__.py  judicial_reasoning.py  judicial_reasoning_ensemble_update.py  opinion_generation.py  opinion_generation_ensemble_update.py  precedent_analysis.py  precedent_analysis_ensemble_update.py
jurisdiction/: __init__.py  compliance_judge.py  compliance_judge_update.py  inference_engine.py  us_system.py
routing/: __init__.py  hybrid_evaluation.py  router.py  task_weights.py
utils/: __init__.py  cache.py  logging.py  rate_limiter.py
